commits/WordPress-Android/5ae93b9be732a26d2aeb3d23a833a765dc7d8443.txt
Build: Disable non final resources for the project

This is an AGP version '8.0' breaking change that changes the build
option default values, see build failure below:

PS: The alternative would be to keep the default, that is, having the
'android.nonFinalResIds' enabled, and then resolve all violating such
res references. However, this would require a significant amount extra
work and then testing. As such, it might be best to ignore this as out
of scope, for now, and so as to not introduce any breaking changes with
this upgrade overall.

------------------------------------------------------------------------

> Task :WordPress:compileJetpackWasabiDebugKotlin FAILED
e: file:///Users/.../WordPress/src/main/java/org/wordpress/android/ui/
avatars/TrainOfAvatarsItem.kt:11:38 Const 'val' initializer should be a
constant value
e: file:///Users/.../WordPress/src/main/java/org/wordpress/android/ui/
avatars/TrainOfAvatarsItem.kt:14:31 Const 'val' initializer should be a
constant value
e: file:///Users/.../WordPress/src/main/java/org/wordpress/android/ui/
jetpackoverlay/JetpackBrandingUiState.kt:15:43 Const 'val' initializer
should be a constant value
e: file:///Users/.../WordPress/src/main/java/org/wordpress/android/ui/
jetpackoverlay/JetpackBrandingUiState.kt:16:42 Const 'val' initializer
should be a constant value
e: file:///Users/.../WordPress/src/main/java/org/wordpress/android/ui/
jetpackoverlay/JetpackBrandingUiState.kt:21:41 Const 'val' initializer
should be a constant value
e: file:///Users/.../WordPress/src/main/java/org/wordpress/android/ui/
jetpackoverlay/JetpackBrandingUiState.kt:22:40 Const 'val' initializer
should be a constant value
e: file:///Users/.../WordPress/src/main/java/org/wordpress/android/ui/
jetpackoverlay/JetpackBrandingUiState.kt:39:36 Const 'val' initializer
should be a constant value
e: file:///Users/.../WordPress/src/main/java/org/wordpress/android/ui/
sitecreation/services/SiteCreationServiceNotification.kt:9:38 Const
'val' initializer should be a constant value
e: file:///Users/.../WordPress/src/main/java/org/wordpress/android/ui/
sitecreation/services/SiteCreationServiceNotification.kt:10:36 Const
'val' initializer should be a constant value
e: file:///Users/.../WordPress/src/main/java/org/wordpress/android/ui/
sitecreation/services/SiteCreationServiceNotification.kt:11:39 Const
'val' initializer should be a constant value
e: file:///Users/.../WordPress/src/main/java/org/wordpress/android/
viewmodel/pages/PostPageListLabelColorUseCase.kt:17:25 Const 'val'
initializer should be a constant value
e: file:///Users/.../WordPress/src/main/java/org/wordpress/android/
viewmodel/pages/PostPageListLabelColorUseCase.kt:18:33 Const 'val'
initializer should be a constant value
e: file:///Users/.../WordPress/src/main/java/org/wordpress/android/
viewmodel/pages/PostPageListLabelColorUseCase.kt:19:30 Const 'val'
initializer should be a constant value

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':WordPress:compileJetpackWasabiDebugKotlin'.
> A failure occurred while executing org.jetbrains.kotlin.compilerRunner
 .GradleCompilerRunnerWithWorkers$GradleKotlinCompilerWorkAction
   > Compilation error. See log for more details

------------------------------------------------------------------------

> Task :WordPress:compileJetpackWasabiDebugJavaWithJavac
The following annotation processors are not incremental: processors.jar
 (project :libs:processors).
Make sure all annotation processors are incremental to improve your
 build speed.
/Users/.../WordPress/src/main/java/org/wordpress/android/ui/posts/
InsertMediaDialog.java:134: error: constant expression required
                        case R.id.radio_circles:
                                 ^
/Users/.../WordPress/src/main/java/org/wordpress/android/ui/posts/
InsertMediaDialog.java:137: error: constant expression required
                        case R.id.radio_slideshow:
                                 ^
/Users/.../WordPress/src/main/java/org/wordpress/android/ui/posts/
InsertMediaDialog.java:140: error: constant expression required
                        case R.id.radio_squares:
                                 ^
/Users/.../WordPress/src/main/java/org/wordpress/android/ui/posts/
InsertMediaDialog.java:143: error: constant expression required
                        case R.id.radio_tiled:
                                 ^
/Users/.../WordPress/src/main/java/org/wordpress/android/ui/reader/
ReaderPostListActivity.java:221: error: constant expression required
            case R.id.menu_share:
                     ^
/Users/.../WordPress/src/main/java/org/wordpress/android/ui/prefs/
SiteSettingsFragment.java:2159: error: constant expression required
                case R.id.menu_delete:
                         ^
/Users/.../WordPress/src/main/java/org/wordpress/android/ui/prefs/
SiteSettingsFragment.java:2178: error: constant expression required
                case R.id.menu_select_all:
                         ^
/Users/.../WordPress/src/main/java/org/wordpress/android/ui/media/
MediaBrowserActivity.java:645: error: constant expression required
            case R.id.menu_new_media:
                     ^
/Users/.../WordPress/src/main/java/org/wordpress/android/ui/media/
MediaBrowserActivity.java:648: error: constant expression required
            case R.id.menu_search:
                     ^
/Users/.../WordPress/src/main/java/org/wordpress/android/ui/
AppLogViewerActivity.java:152: error: constant expression required
            case R.id.app_log_share:
                     ^
/Users/.../WordPress/src/main/java/org/wordpress/android/ui/
AppLogViewerActivity.java:155: error: constant expression required
            case R.id.app_log_copy_to_clipboard:
                     ^
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
11 errors

> Task :WordPress:compileJetpackWasabiDebugJavaWithJavac FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task
 ':WordPress:compileJetpackWasabiDebugJavaWithJavac'.
> Compilation failed; see the compiler error output for details.

------------------------------------------------------------------------

Explanation: "Starting with AGP 8.0, the default values for these flags
have changed to improve build performance. AGP 8.0 generates R classes
with non-final fields by default."

For more info see: https://developer.android.com/build/releases/
gradle-plugin#default-changes

------------------------------------------------------------------------

This commit updates the encrypted 'gradle.properties.enc' file to point
to that pinned hash which has the 'android.nonFinalResIds=false'
property added into the 'gradle.properties' file for the WPAndroid
project.

FYI: This is done in order for the CI to pick-up this specific change
and download the correct version of 'gradle.properties' to then build
the project with non transitive resources enabled.